--- a/training.ipynb
+++ b/training.ipynb
@@ -46,7 +46,7 @@
      "text": [
       "  0%|          | 0/400 [00:00<?, ?it/s]/Users/giuseppeesposito/Desktop/polito/secondo_anno/primo_semestre/iot/homework/quaroniSMS/preprocessing.py:114: WavFileWarning: Chunk (non-data) not understood, skipping it.\n",
       "  input_audiofile = siw.read(audio_path)\n",
-      "100%|██████████| 400/400 [00:00<00:00, 415.60it/s]\n"
+      "100%|██████████| 400/400 [00:01<00:00, 260.08it/s]\n"
      ]
     }
    ],
@@ -153,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -190,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -219,18 +219,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "unhashable type: 'numpy.ndarray'",
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "  0%|          | 0/512 [00:00<?, ?it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'alpha': 0.1, 'batch_size': 5, 'end_learning_rate': 1e-05, 'epochs': 10, 'frame_length_in_s': 0.02, 'frame_step_in_s': 0.01, 'initial_learning_rate': 0.01, 'lower_frequency': 15, 'num_hidden_layers': 5, 'num_mel_bins': 10, 'num_mfccs_features': -1, 'upper_frequency': 30}\n",
+      "(5, 32, 32, 1)\n",
+      "tf.Tensor([2 2 2 1 1], shape=(5,), dtype=int64)\n",
+      "Epoch 1/10\n",
+      "63/63 [==============================] - 17s 211ms/step - loss: 1.0135 - sparse_categorical_accuracy: 0.3503 - val_loss: 1.3911 - val_sparse_categorical_accuracy: 0.4783\n",
+      "Epoch 2/10\n",
+      "26/63 [===========>..................] - ETA: 6s - loss: 0.9428 - sparse_categorical_accuracy: 0.5077"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "  0%|          | 0/512 [00:26<?, ?it/s]\n"
+     ]
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
      "output_type": "error",
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m/Users/giuseppeesposito/Desktop/polito/secondo_anno/primo_semestre/iot/homework/quaroniSMS/training.ipynb Cell 10\u001b[0m in \u001b[0;36m<cell line: 21>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/giuseppeesposito/Desktop/polito/secondo_anno/primo_semestre/iot/homework/quaroniSMS/training.ipynb#X12sZmlsZQ%3D%3D?line=14'>15</a>\u001b[0m \u001b[39m# train_file_ds = tf.data.Dataset.list_files(['complete_training_data/*.wav'])\u001b[39;00m\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/giuseppeesposito/Desktop/polito/secondo_anno/primo_semestre/iot/homework/quaroniSMS/training.ipynb#X12sZmlsZQ%3D%3D?line=15'>16</a>\u001b[0m \u001b[39m# validation_file_ds = tf.data.Dataset.list_files(['complete_validation_data/*.wav'])\u001b[39;00m\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/giuseppeesposito/Desktop/polito/secondo_anno/primo_semestre/iot/homework/quaroniSMS/training.ipynb#X12sZmlsZQ%3D%3D?line=16'>17</a>\u001b[0m \u001b[39m# test_file_ds = tf.data.Dataset.list_files(['complete_test_data/*.wav'])\u001b[39;00m\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/giuseppeesposito/Desktop/polito/secondo_anno/primo_semestre/iot/homework/quaroniSMS/training.ipynb#X12sZmlsZQ%3D%3D?line=20'>21</a>\u001b[0m \u001b[39mfor\u001b[39;00m split_idx, (train_idx, test_idx) \u001b[39min\u001b[39;00m \u001b[39menumerate\u001b[39m(splits):\n\u001b[0;32m---> <a href='vscode-notebook-cell:/Users/giuseppeesposito/Desktop/polito/secondo_anno/primo_semestre/iot/homework/quaroniSMS/training.ipynb#X12sZmlsZQ%3D%3D?line=21'>22</a>\u001b[0m     shutil\u001b[39m.\u001b[39mcopy({data_paths[test_idx]}, \u001b[39m'\u001b[39m\u001b[39mcomplete_test_data\u001b[39m\u001b[39m'\u001b[39m)\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/giuseppeesposito/Desktop/polito/secondo_anno/primo_semestre/iot/homework/quaroniSMS/training.ipynb#X12sZmlsZQ%3D%3D?line=22'>23</a>\u001b[0m     shutil\u001b[39m.\u001b[39mcopy({data_paths[train_idx]}, \u001b[39m'\u001b[39m\u001b[39mcomplete_training_data\u001b[39m\u001b[39m'\u001b[39m)\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/giuseppeesposito/Desktop/polito/secondo_anno/primo_semestre/iot/homework/quaroniSMS/training.ipynb#X12sZmlsZQ%3D%3D?line=23'>24</a>\u001b[0m     test_file_ds \u001b[39m=\u001b[39m tf\u001b[39m.\u001b[39mdata\u001b[39m.\u001b[39mDataset\u001b[39m.\u001b[39mlist_files(\u001b[39mf\u001b[39m\u001b[39m'\u001b[39m\u001b[39m{\u001b[39;00mdata_paths[test_idx]\u001b[39m}\u001b[39;00m\u001b[39m'\u001b[39m)\n",
-      "\u001b[0;31mTypeError\u001b[0m: unhashable type: 'numpy.ndarray'"
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[1;32m/Users/giuseppeesposito/Desktop/polito/secondo_anno/primo_semestre/iot/homework/quaroniSMS/training.ipynb Cell 10\u001b[0m in \u001b[0;36m<cell line: 25>\u001b[0;34m()\u001b[0m\n\u001b[1;32m    <a href='vscode-notebook-cell:/Users/giuseppeesposito/Desktop/polito/secondo_anno/primo_semestre/iot/homework/quaroniSMS/training.ipynb#X12sZmlsZQ%3D%3D?line=112'>113</a>\u001b[0m callbacks \u001b[39m=\u001b[39m [tfmot\u001b[39m.\u001b[39msparsity\u001b[39m.\u001b[39mkeras\u001b[39m.\u001b[39mUpdatePruningStep()]\n\u001b[1;32m    <a href='vscode-notebook-cell:/Users/giuseppeesposito/Desktop/polito/secondo_anno/primo_semestre/iot/homework/quaroniSMS/training.ipynb#X12sZmlsZQ%3D%3D?line=113'>114</a>\u001b[0m model_for_pruning\u001b[39m.\u001b[39mcompile(loss\u001b[39m=\u001b[39mloss, optimizer\u001b[39m=\u001b[39moptimizer, metrics\u001b[39m=\u001b[39mmetrics)\n\u001b[0;32m--> <a href='vscode-notebook-cell:/Users/giuseppeesposito/Desktop/polito/secondo_anno/primo_semestre/iot/homework/quaroniSMS/training.ipynb#X12sZmlsZQ%3D%3D?line=115'>116</a>\u001b[0m history \u001b[39m=\u001b[39m model_for_pruning\u001b[39m.\u001b[39;49mfit(train_ds, epochs\u001b[39m=\u001b[39;49mepoch, validation_data\u001b[39m=\u001b[39;49mvalidation_ds, callbacks\u001b[39m=\u001b[39;49mcallbacks)\n\u001b[1;32m    <a href='vscode-notebook-cell:/Users/giuseppeesposito/Desktop/polito/secondo_anno/primo_semestre/iot/homework/quaroniSMS/training.ipynb#X12sZmlsZQ%3D%3D?line=116'>117</a>\u001b[0m \u001b[39m# computing statistics\u001b[39;00m\n\u001b[1;32m    <a href='vscode-notebook-cell:/Users/giuseppeesposito/Desktop/polito/secondo_anno/primo_semestre/iot/homework/quaroniSMS/training.ipynb#X12sZmlsZQ%3D%3D?line=117'>118</a>\u001b[0m \u001b[39m# test_loss, test_accuracy = model_for_pruning.evaluate(test_ds)\u001b[39;00m\n\u001b[1;32m    <a href='vscode-notebook-cell:/Users/giuseppeesposito/Desktop/polito/secondo_anno/primo_semestre/iot/homework/quaroniSMS/training.ipynb#X12sZmlsZQ%3D%3D?line=118'>119</a>\u001b[0m training_loss \u001b[39m=\u001b[39m history\u001b[39m.\u001b[39mhistory[\u001b[39m'\u001b[39m\u001b[39mloss\u001b[39m\u001b[39m'\u001b[39m][\u001b[39m-\u001b[39m\u001b[39m1\u001b[39m]\n",
+      "File \u001b[0;32m~/opt/anaconda3/envs/MLiot/lib/python3.10/site-packages/keras/utils/traceback_utils.py:64\u001b[0m, in \u001b[0;36mfilter_traceback.<locals>.error_handler\u001b[0;34m(*args, **kwargs)\u001b[0m\n\u001b[1;32m     62\u001b[0m filtered_tb \u001b[39m=\u001b[39m \u001b[39mNone\u001b[39;00m\n\u001b[1;32m     63\u001b[0m \u001b[39mtry\u001b[39;00m:\n\u001b[0;32m---> 64\u001b[0m   \u001b[39mreturn\u001b[39;00m fn(\u001b[39m*\u001b[39;49margs, \u001b[39m*\u001b[39;49m\u001b[39m*\u001b[39;49mkwargs)\n\u001b[1;32m     65\u001b[0m \u001b[39mexcept\u001b[39;00m \u001b[39mException\u001b[39;00m \u001b[39mas\u001b[39;00m e:  \u001b[39m# pylint: disable=broad-except\u001b[39;00m\n\u001b[1;32m     66\u001b[0m   filtered_tb \u001b[39m=\u001b[39m _process_traceback_frames(e\u001b[39m.\u001b[39m__traceback__)\n",
+      "File \u001b[0;32m~/opt/anaconda3/envs/MLiot/lib/python3.10/site-packages/keras/engine/training.py:1409\u001b[0m, in \u001b[0;36mModel.fit\u001b[0;34m(self, x, y, batch_size, epochs, verbose, callbacks, validation_split, validation_data, shuffle, class_weight, sample_weight, initial_epoch, steps_per_epoch, validation_steps, validation_batch_size, validation_freq, max_queue_size, workers, use_multiprocessing)\u001b[0m\n\u001b[1;32m   1402\u001b[0m \u001b[39mwith\u001b[39;00m tf\u001b[39m.\u001b[39mprofiler\u001b[39m.\u001b[39mexperimental\u001b[39m.\u001b[39mTrace(\n\u001b[1;32m   1403\u001b[0m     \u001b[39m'\u001b[39m\u001b[39mtrain\u001b[39m\u001b[39m'\u001b[39m,\n\u001b[1;32m   1404\u001b[0m     epoch_num\u001b[39m=\u001b[39mepoch,\n\u001b[1;32m   1405\u001b[0m     step_num\u001b[39m=\u001b[39mstep,\n\u001b[1;32m   1406\u001b[0m     batch_size\u001b[39m=\u001b[39mbatch_size,\n\u001b[1;32m   1407\u001b[0m     _r\u001b[39m=\u001b[39m\u001b[39m1\u001b[39m):\n\u001b[1;32m   1408\u001b[0m   callbacks\u001b[39m.\u001b[39mon_train_batch_begin(step)\n\u001b[0;32m-> 1409\u001b[0m   tmp_logs \u001b[39m=\u001b[39m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mtrain_function(iterator)\n\u001b[1;32m   1410\u001b[0m   \u001b[39mif\u001b[39;00m data_handler\u001b[39m.\u001b[39mshould_sync:\n\u001b[1;32m   1411\u001b[0m     context\u001b[39m.\u001b[39masync_wait()\n",
+      "File \u001b[0;32m~/opt/anaconda3/envs/MLiot/lib/python3.10/site-packages/tensorflow/python/util/traceback_utils.py:150\u001b[0m, in \u001b[0;36mfilter_traceback.<locals>.error_handler\u001b[0;34m(*args, **kwargs)\u001b[0m\n\u001b[1;32m    148\u001b[0m filtered_tb \u001b[39m=\u001b[39m \u001b[39mNone\u001b[39;00m\n\u001b[1;32m    149\u001b[0m \u001b[39mtry\u001b[39;00m:\n\u001b[0;32m--> 150\u001b[0m   \u001b[39mreturn\u001b[39;00m fn(\u001b[39m*\u001b[39;49margs, \u001b[39m*\u001b[39;49m\u001b[39m*\u001b[39;49mkwargs)\n\u001b[1;32m    151\u001b[0m \u001b[39mexcept\u001b[39;00m \u001b[39mException\u001b[39;00m \u001b[39mas\u001b[39;00m e:\n\u001b[1;32m    152\u001b[0m   filtered_tb \u001b[39m=\u001b[39m _process_traceback_frames(e\u001b[39m.\u001b[39m__traceback__)\n",
+      "File \u001b[0;32m~/opt/anaconda3/envs/MLiot/lib/python3.10/site-packages/tensorflow/python/eager/def_function.py:915\u001b[0m, in \u001b[0;36mFunction.__call__\u001b[0;34m(self, *args, **kwds)\u001b[0m\n\u001b[1;32m    912\u001b[0m compiler \u001b[39m=\u001b[39m \u001b[39m\"\u001b[39m\u001b[39mxla\u001b[39m\u001b[39m\"\u001b[39m \u001b[39mif\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_jit_compile \u001b[39melse\u001b[39;00m \u001b[39m\"\u001b[39m\u001b[39mnonXla\u001b[39m\u001b[39m\"\u001b[39m\n\u001b[1;32m    914\u001b[0m \u001b[39mwith\u001b[39;00m OptionalXlaContext(\u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_jit_compile):\n\u001b[0;32m--> 915\u001b[0m   result \u001b[39m=\u001b[39m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_call(\u001b[39m*\u001b[39;49margs, \u001b[39m*\u001b[39;49m\u001b[39m*\u001b[39;49mkwds)\n\u001b[1;32m    917\u001b[0m new_tracing_count \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mexperimental_get_tracing_count()\n\u001b[1;32m    918\u001b[0m without_tracing \u001b[39m=\u001b[39m (tracing_count \u001b[39m==\u001b[39m new_tracing_count)\n",
+      "File \u001b[0;32m~/opt/anaconda3/envs/MLiot/lib/python3.10/site-packages/tensorflow/python/eager/def_function.py:947\u001b[0m, in \u001b[0;36mFunction._call\u001b[0;34m(self, *args, **kwds)\u001b[0m\n\u001b[1;32m    944\u001b[0m   \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_lock\u001b[39m.\u001b[39mrelease()\n\u001b[1;32m    945\u001b[0m   \u001b[39m# In this case we have created variables on the first call, so we run the\u001b[39;00m\n\u001b[1;32m    946\u001b[0m   \u001b[39m# defunned version which is guaranteed to never create variables.\u001b[39;00m\n\u001b[0;32m--> 947\u001b[0m   \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_stateless_fn(\u001b[39m*\u001b[39;49margs, \u001b[39m*\u001b[39;49m\u001b[39m*\u001b[39;49mkwds)  \u001b[39m# pylint: disable=not-callable\u001b[39;00m\n\u001b[1;32m    948\u001b[0m \u001b[39melif\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_stateful_fn \u001b[39mis\u001b[39;00m \u001b[39mnot\u001b[39;00m \u001b[39mNone\u001b[39;00m:\n\u001b[1;32m    949\u001b[0m   \u001b[39m# Release the lock early so that multiple threads can perform the call\u001b[39;00m\n\u001b[1;32m    950\u001b[0m   \u001b[39m# in parallel.\u001b[39;00m\n\u001b[1;32m    951\u001b[0m   \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_lock\u001b[39m.\u001b[39mrelease()\n",
+      "File \u001b[0;32m~/opt/anaconda3/envs/MLiot/lib/python3.10/site-packages/tensorflow/python/eager/function.py:2453\u001b[0m, in \u001b[0;36mFunction.__call__\u001b[0;34m(self, *args, **kwargs)\u001b[0m\n\u001b[1;32m   2450\u001b[0m \u001b[39mwith\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_lock:\n\u001b[1;32m   2451\u001b[0m   (graph_function,\n\u001b[1;32m   2452\u001b[0m    filtered_flat_args) \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_maybe_define_function(args, kwargs)\n\u001b[0;32m-> 2453\u001b[0m \u001b[39mreturn\u001b[39;00m graph_function\u001b[39m.\u001b[39;49m_call_flat(\n\u001b[1;32m   2454\u001b[0m     filtered_flat_args, captured_inputs\u001b[39m=\u001b[39;49mgraph_function\u001b[39m.\u001b[39;49mcaptured_inputs)\n",
+      "File \u001b[0;32m~/opt/anaconda3/envs/MLiot/lib/python3.10/site-packages/tensorflow/python/eager/function.py:1860\u001b[0m, in \u001b[0;36mConcreteFunction._call_flat\u001b[0;34m(self, args, captured_inputs, cancellation_manager)\u001b[0m\n\u001b[1;32m   1856\u001b[0m possible_gradient_type \u001b[39m=\u001b[39m gradients_util\u001b[39m.\u001b[39mPossibleTapeGradientTypes(args)\n\u001b[1;32m   1857\u001b[0m \u001b[39mif\u001b[39;00m (possible_gradient_type \u001b[39m==\u001b[39m gradients_util\u001b[39m.\u001b[39mPOSSIBLE_GRADIENT_TYPES_NONE\n\u001b[1;32m   1858\u001b[0m     \u001b[39mand\u001b[39;00m executing_eagerly):\n\u001b[1;32m   1859\u001b[0m   \u001b[39m# No tape is watching; skip to running the function.\u001b[39;00m\n\u001b[0;32m-> 1860\u001b[0m   \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_build_call_outputs(\u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_inference_function\u001b[39m.\u001b[39;49mcall(\n\u001b[1;32m   1861\u001b[0m       ctx, args, cancellation_manager\u001b[39m=\u001b[39;49mcancellation_manager))\n\u001b[1;32m   1862\u001b[0m forward_backward \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_select_forward_and_backward_functions(\n\u001b[1;32m   1863\u001b[0m     args,\n\u001b[1;32m   1864\u001b[0m     possible_gradient_type,\n\u001b[1;32m   1865\u001b[0m     executing_eagerly)\n\u001b[1;32m   1866\u001b[0m forward_function, args_with_tangents \u001b[39m=\u001b[39m forward_backward\u001b[39m.\u001b[39mforward()\n",
+      "File \u001b[0;32m~/opt/anaconda3/envs/MLiot/lib/python3.10/site-packages/tensorflow/python/eager/function.py:497\u001b[0m, in \u001b[0;36m_EagerDefinedFunction.call\u001b[0;34m(self, ctx, args, cancellation_manager)\u001b[0m\n\u001b[1;32m    495\u001b[0m \u001b[39mwith\u001b[39;00m _InterpolateFunctionError(\u001b[39mself\u001b[39m):\n\u001b[1;32m    496\u001b[0m   \u001b[39mif\u001b[39;00m cancellation_manager \u001b[39mis\u001b[39;00m \u001b[39mNone\u001b[39;00m:\n\u001b[0;32m--> 497\u001b[0m     outputs \u001b[39m=\u001b[39m execute\u001b[39m.\u001b[39;49mexecute(\n\u001b[1;32m    498\u001b[0m         \u001b[39mstr\u001b[39;49m(\u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49msignature\u001b[39m.\u001b[39;49mname),\n\u001b[1;32m    499\u001b[0m         num_outputs\u001b[39m=\u001b[39;49m\u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_num_outputs,\n\u001b[1;32m    500\u001b[0m         inputs\u001b[39m=\u001b[39;49margs,\n\u001b[1;32m    501\u001b[0m         attrs\u001b[39m=\u001b[39;49mattrs,\n\u001b[1;32m    502\u001b[0m         ctx\u001b[39m=\u001b[39;49mctx)\n\u001b[1;32m    503\u001b[0m   \u001b[39melse\u001b[39;00m:\n\u001b[1;32m    504\u001b[0m     outputs \u001b[39m=\u001b[39m execute\u001b[39m.\u001b[39mexecute_with_cancellation(\n\u001b[1;32m    505\u001b[0m         \u001b[39mstr\u001b[39m(\u001b[39mself\u001b[39m\u001b[39m.\u001b[39msignature\u001b[39m.\u001b[39mname),\n\u001b[1;32m    506\u001b[0m         num_outputs\u001b[39m=\u001b[39m\u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_num_outputs,\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m    509\u001b[0m         ctx\u001b[39m=\u001b[39mctx,\n\u001b[1;32m    510\u001b[0m         cancellation_manager\u001b[39m=\u001b[39mcancellation_manager)\n",
+      "File \u001b[0;32m~/opt/anaconda3/envs/MLiot/lib/python3.10/site-packages/tensorflow/python/eager/execute.py:54\u001b[0m, in \u001b[0;36mquick_execute\u001b[0;34m(op_name, num_outputs, inputs, attrs, ctx, name)\u001b[0m\n\u001b[1;32m     52\u001b[0m \u001b[39mtry\u001b[39;00m:\n\u001b[1;32m     53\u001b[0m   ctx\u001b[39m.\u001b[39mensure_initialized()\n\u001b[0;32m---> 54\u001b[0m   tensors \u001b[39m=\u001b[39m pywrap_tfe\u001b[39m.\u001b[39;49mTFE_Py_Execute(ctx\u001b[39m.\u001b[39;49m_handle, device_name, op_name,\n\u001b[1;32m     55\u001b[0m                                       inputs, attrs, num_outputs)\n\u001b[1;32m     56\u001b[0m \u001b[39mexcept\u001b[39;00m core\u001b[39m.\u001b[39m_NotOkStatusException \u001b[39mas\u001b[39;00m e:\n\u001b[1;32m     57\u001b[0m   \u001b[39mif\u001b[39;00m name \u001b[39mis\u001b[39;00m \u001b[39mnot\u001b[39;00m \u001b[39mNone\u001b[39;00m:\n",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
      ]
     }
    ],
@@ -262,12 +298,15 @@
     "for split_idx, (train_idx, test_idx) in enumerate(splits):\n",
     "    # ogni volta che cambia il numero della cartella popolo le cartelle che usavamo prima così ci sono meno modifiche da fare nel codice che \n",
     "    # avevamo già scritto (è qui che faccio casino con i dataset)\n",
-    "    shutil.copy({data_paths[test_idx]}, 'complete_test_data')\n",
-    "    shutil.copy({data_paths[train_idx]}, 'complete_training_data')\n",
+    "    for ind in range(len(data_paths)):\n",
+    "        if ind in train_idx:\n",
+    "            shutil.copy(f'unpacked_formatted_data/{data_paths[ind]}', 'complete_training_data')\n",
+    "        else:\n",
+    "            shutil.copy(f'unpacked_formatted_data/{data_paths[ind]}', 'complete_test_data')\n",
     "    \n",
-    "    test_file_ds = tf.data.Dataset.list_files({data_paths[test_idx]})\n",
+    "    test_file_ds = tf.data.Dataset.list_files('complete_test_data/*.wav')\n",
     "    validation_file_ds = tf.data.Dataset.list_files('complete_validation_data/*.wav')\n",
-    "    train_file_ds = tf.data.Dataset.list_files(f'{data_paths[train_idx]}')\n",
+    "    train_file_ds = tf.data.Dataset.list_files(f'complete_training_data/*')\n",
     "    for idx in tqdm(range(len(configurations[\"configurations\"]))):\n",
     "        config = configurations[\"configurations\"][idx]\n",
     "        print(config)\n",
